--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>rishavfieldcalculator</title>
+    <title>Field Calculator</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but rishavfieldcalculator doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Field Calculator doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
